--- a/index.html
+++ b/index.html
@@ -3,27 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Scheduler</title>
+    <title>Personal Daily Scheduler</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <div class="jumbotron text-center">
+        <h1 class="display-4">DAILY SCHEDULER</h1>
+        <p class="lead">Plan your day, with this convenient scheduling app. Enter your tasks and select 'save' to store your changes.</p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <p>Date & Time Placeholder</p>
     </div>
     <div class ="container"> 
+
+        <!--Morning Hours-->
         <table class="table">
-            <thead class="thead-dark">
+            <thead class="thead-dark thead-sticky">
               <tr>
                 <th scope="col-1" style="width: 10%">AM</th>
                 <th scope="col-11" style="width: 90%">EVENT/MEETING/TASK</th>
               </tr>
             </thead>
             <tbody>
+              <tr>
+                <th scope="row">12</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
+              </tr>
               <tr>
                 <th scope="row">1</th>
                 <td>
@@ -34,7 +47,6 @@
                         </div>
                     </div>
                 </td>
-                <td></td>
               </tr>
               <tr>
                 <th scope="row">2</th>
@@ -46,10 +58,97 @@
                         </div>
                     </div>
                 </td>
-                <td></td>
               </tr>
               <tr>
                 <th scope="row">3</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">4</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">5</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">6</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">7</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">8</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">9</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">10</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">11</th>
                 <td>
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
@@ -62,7 +161,8 @@
               </tr>
             </tbody>
           </table>
-          
+
+          <!--Afternoon & Evening Hours-->
           <table class="table">
             <thead class="thead-light">
               <tr>
@@ -72,6 +172,17 @@
             </thead>
             <tbody>
               <tr>
+                <th scope="row">12</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
+              </tr>
+              <tr>
                 <th scope="row">1</th>
                 <td>
                     <div class="input-group mb-3">
@@ -81,7 +192,6 @@
                         </div>
                     </div>
                 </td>
-                <td></td>
               </tr>
               <tr>
                 <th scope="row">2</th>
@@ -93,7 +203,6 @@
                         </div>
                     </div>
                 </td>
-                <td></td>
               </tr>
               <tr>
                 <th scope="row">3</th>
@@ -105,11 +214,99 @@
                         </div>
                     </div>
                 </td>
-                <td></td>
+              </tr>
+              <tr>
+                <th scope="row">4</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">5</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">6</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">7</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">8</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">9</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">10</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">11</th>
+                <td>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="ENTER TEXT HERE" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary" type="button" id="button-addon2">SAVE</button>
+                        </div>
+                    </div>
+                </td>
               </tr>
             </tbody>
           </table>
     </div>
+    <script src="extensions/sticky-header/bootstrap-table-sticky-header.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
