Working html layout with moment.js function displaying current time, updating every second.

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <h1 class="display-4">DAILY SCHEDULER</h1>
         <p class="lead">Plan your day, with this convenient scheduling app. Enter your tasks and select 'save' to store your changes.</p>
         <hr class="my-4">
-        <p>Date & Time Placeholder</p>
+        <p class="date-time">Date & Time Placeholder</p>
     </div>
-    <div class ="container"> 
+    <div class ="container floatContainerClass"> 
 
         <!--Morning Hours-->
         <table class="table">
-            <thead class="thead-dark thead-sticky">
+            <thead class="thead-dark">
               <tr>
                 <th scope="col-1" style="width: 10%">AM</th>
                 <th scope="col-11" style="width: 90%">EVENT/MEETING/TASK</th>
@@ -306,9 +306,10 @@
             </tbody>
           </table>
     </div>
-    <script src="extensions/sticky-header/bootstrap-table-sticky-header.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <!--<script src="extensions/sticky-header/bootstrap-table-sticky-header.js"></script>-->
+    
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
