I am using a attr (opacity) change for hours from 12am to 1 hour prior to the current time, and an attr (read only)change for the same hour blocks, to keep users from updating content in the past.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr class="hourBlock">
+              <tr class="hourBlock 0">
                 <th scope="row" class="time">12am</th>
                 <td>
                     <div class="input-group mb-3">
@@ -37,7 +37,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock">
+              <tr class="hourBlock 1">
                 <th scope="row" class="time">1am</th>
                 <td>
                     <div class="input-group mb-3">
@@ -48,7 +48,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock">
+              <tr class="hourBlock 2">
                 <th scope="row" class="time">2am</th>
                 <td>
                     <div class="input-group mb-3">
@@ -59,7 +59,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock">
+              <tr class="hourBlock 3">
                 <th scope="row" class="time">3am</th>
                 <td>
                     <div class="input-group mb-3">
@@ -70,7 +70,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock">
+              <tr class="hourBlock 4">
                 <th scope="row" class="time">4am</th>
                 <td>
                     <div class="input-group mb-3">
@@ -81,7 +81,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock">
+              <tr class="hourBlock 5">
                 <th scope="row" class="time">5am</th>
                 <td>
                     <div class="input-group mb-3">
@@ -92,7 +92,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock">
+              <tr class="hourBlock 6">
                 <th scope="row" class="time">6am</th>
                 <td>
                     <div class="input-group mb-3">
@@ -103,7 +103,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock">
+              <tr class="hourBlock 7">
                 <th scope="row" class="time">7am</th>
                 <td>
                     <div class="input-group mb-3">
@@ -114,7 +114,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock">
+              <tr class="hourBlock 8">
                 <th scope="row" class="time">8am</th>
                 <td>
                     <div class="input-group mb-3">
@@ -125,7 +125,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock">
+              <tr class="hourBlock 9">
                 <th scope="row" class="time">9am</th>
                 <td>
                     <div class="input-group mb-3">
@@ -136,7 +136,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock">
+              <tr class="hourBlock 10">
                 <th scope="row" class="time">10am</th>
                 <td>
                     <div class="input-group mb-3">
@@ -147,7 +147,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock">
+              <tr class="hourBlock 11">
                 <th scope="row" class="time">11am</th>
                 <td>
                     <div class="input-group mb-3">
@@ -171,7 +171,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr class="hourBlock">
+              <tr class="hourBlock 12">
                 <th scope="row" class="time">12pm</th>
                 <td>
                     <div class="input-group mb-3">
@@ -182,7 +182,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock">
+              <tr class="hourBlock 13">
                 <th scope="row" class="time">1pm</th>
                 <td>
                     <div class="input-group mb-3">
@@ -193,7 +193,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock" value="14">
+              <tr class="hourBlock 14">
                 <th scope="row" class="time">2pm</th>
                 <td>
                     <div class="input-group mb-3">
@@ -204,7 +204,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock" value="15">
+              <tr class="hourBlock 15">
                 <th scope="row" class="time">3pm</th>
                 <td>
                     <div class="input-group mb-3">
@@ -215,7 +215,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock" value="16">
+              <tr class="hourBlock 16">
                 <th scope="row" class="time">4pm</th>
                 <td>
                     <div class="input-group mb-3">
@@ -226,7 +226,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock" value="17">
+              <tr class="hourBlock 17">
                 <th scope="row" class="time">5pm</th>
                 <td>
                     <div class="input-group mb-3">
@@ -237,7 +237,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock" value="18">
+              <tr class="hourBlock 18">
                 <th scope="row" class="time">6pm</th>
                 <td>
                     <div class="input-group mb-3">
@@ -248,7 +248,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock" value="19">
+              <tr class="hourBlock 19">
                 <th scope="row" class="time">7pm</th>
                 <td>
                     <div class="input-group mb-3">
@@ -259,7 +259,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock" value="20">
+              <tr class="hourBlock 20">
                 <th scope="row" class="time">8pm</th>
                 <td>
                     <div class="input-group mb-3">
@@ -270,7 +270,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock" value="21">
+              <tr class="hourBlock 21">
                 <th scope="row" class="time">9pm</th>
                 <td>
                     <div class="input-group mb-3">
@@ -281,7 +281,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock" value="22">
+              <tr class="hourBlock 22">
                 <th scope="row" class="time">10pm</th>
                 <td>
                     <div class="input-group mb-3">
@@ -292,7 +292,7 @@
                     </div>
                 </td>
               </tr>
-              <tr class="hourBlock" value="23">
+              <tr class="hourBlock 23">
                 <th scope="row" class="time">11pm</th>
                 <td>
                     <div class="input-group mb-3">
