updated page to have different sytles for past/present/future hour blocks, disabled button for past hour block, which is read only anyways

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="jumbotron text-center header">
+    <div class="jumbotron text-center header sticky-top">
         <h1 class="display-4" id="heading">DAILY SCHEDULER</h1>
         <p class="lead">Plan your day, with this convenient scheduling app. Enter your tasks and select 'save' to store your changes.</p>
         <hr class="my-4">
@@ -189,6 +189,7 @@
     
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="extensions/sticky-header/bootstrap-table-sticky-header.js"></script>
     <script src="script.js"></script>
 </body>
 </html> 
