--- a/index.html
+++ b/index.html
@@ -91,14 +91,13 @@
                         </div>
                     </div>
                 </td>
-                <td></td>
               </tr>
             </tbody>
           </table>
 
           <!--Afternoon & Evening Hours-->
           <table class="table">
-            <thead class="thead-light">
+            <thead class="thead-dark">
               <tr>
                 <th scope="col-1" style="width: 10%">TIME PM</th>
                 <th scope="col-11" style="width: 90%">EVENT/MEETING/TASK</th>
